--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>Hello world</h1>
+<div class="container">
+  <app-menu></app-menu>
+  <router-outlet></router-outlet>
+  <app-rodape></app-rodape>
+</div>
