--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,1 +1,7 @@
-<p>menu works!</p>
+<nav class="navbar navbar-dark bg-dark menu">
+  <ul class="navbar-nav ">
+    <li class="nav-item"><a href="http://localhost:4200/">Home</a></li>
+    <li class="nav-item"><a href="http://localhost:4200/livros">Livros</a></li>
+    <li class="nav-item"><a href="http://localhost:4200/autores">Autores</a></li>
+  </ul>
+</nav>
