todos arquivos iniciais

--- a/src/app/shared/menu/menu.component.css
+++ b/src/app/shared/menu/menu.component.css
@@ -1,7 +1,11 @@
 .menu{
   display: block;
 }
-.menu ul{
+.navbar-nav{
+  display: flex;
+  justify-content: right;
+}
+.menu-nav{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
