--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-dark bg-dark menu">
   <ul class="navbar-nav ">
-    <li class="nav-item"><a href="http://localhost:4200/">Home</a></li>
-    <li class="nav-item"><a href="http://localhost:4200/livros">Livros</a></li>
-    <li class="nav-item"><a href="http://localhost:4200/autores">Autores</a></li>
+    <div class="menu-nav">
+      <li class="nav-item"><a routerLink="/">Home</a></li>
+      <li class="nav-item"><a routerLink="/livros">Livros</a></li>
+      <li class="nav-item"><a routerLink="/autores">Autores</a></li>
+    </div>
   </ul>
 </nav>
