adcionando crud autor

--- a/src/app/components/autor/altera-autor/altera-autor.component.html
+++ b/src/app/components/autor/altera-autor/altera-autor.component.html
@@ -1,1 +1,30 @@
-<p>altera-autor works!</p>
+<div class="container">
+  <form [formGroup]="cadastroForm" class="form-group mt-3" (ngSubmit)="atualiza()" #formDir="ngForm">
+
+    <div class="mb-3">
+      <label for="id" class="form-label">Id Autor</label>
+      <input type="text" class="form-control" id="id" name="id" placeholder="Digite o nome" formControlName="id"
+        required>
+      <div class="mb-3">
+        <label for="nome" class="form-label">Nome</label>
+        <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite o nome" formControlName="nome"
+          required>
+
+        <div *ngIf="cadastroForm.get('nome')?.errors?.['required'] && formDir.submitted" class="erro-validacao">
+          <p>O Nome é Obrigatório.</p>
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="biografia" class="form-label">Biografia</label>
+        <textarea class="form-control" id="biografia" name="biografia" placeholder="Digite a biografia"
+          formControlName="biografia">
+        </textarea>
+        <div *ngIf="cadastroForm.get('biografia')?.errors?.['required']&& formDir.submitted" class="erro-validacao">
+          <p>O Biografia é Obrigatório.</p>
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Enviar</button>
+  </form>
+</div>
