Refatorando elementos visuais da tela

--- a/src/app/components/autor/altera-autor/altera-autor.component.html
+++ b/src/app/components/autor/altera-autor/altera-autor.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2 class="text-center">Altera Autor</h2>
   <form [formGroup]="cadastroForm" class="form-group mt-3" (ngSubmit)="atualiza()" #formDir="ngForm">
 
     <div class="mb-3">
