--- a/src/app/shared/mensagem/mensagem.component.html
+++ b/src/app/shared/mensagem/mensagem.component.html
@@ -1,1 +1,6 @@
-<small class="text-danger d-block mt-2">{{ mensagem }}</small>
+<div class="p-3">
+  <div class="text-center m-2" mat-dialog-content>{{mensagem}}</div>
+  <div class="text-center" mat-dialog-actions>
+    <button class="btn btn-secondary " mat-button mat-dialog-close>Fechar</button>
+  </div>
+</div>
