--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -11,7 +11,9 @@
     <li class="btn btn-dark">
       <a routerLink="/autores/altera">Alterar Autor</a>
     </li>
+  </ul>
 
+  <ul class="btn-group">
     <li class="btn btn-dark" >
       <a routerLink="/autores/livros">Listar Livros do Autor</a>
     </li>
@@ -28,10 +30,6 @@
 
     <li class="btn btn-dark" type="button">
       <a routerLink="/livros/altera">Alterar Livro</a>
-    </li>
-
-    <li class="btn btn-dark" type="button">
-      <a routerLink="/livros/deleta">Deletar Livro</a>
     </li>
   </ul>
 </nav>
