Refatorando apresentação de autores dos livros

--- a/src/app/components/livro/lista-livros/lista-livros.component.html
+++ b/src/app/components/livro/lista-livros/lista-livros.component.html
@@ -21,7 +21,7 @@
       <tr *ngFor="let livro of livros">
         <td>{{livro.id}}</td>
         <td>{{livro.titulo}}</td>
-        <td>{{livro.autores}}</td>
+        <td *ngFor="let autor of livro.autores">{{autor.nome}}</td>
         <div class="icone">
           <button type="button" (click)="deleta(livro.id)"><i class="fa fa-solid fa-trash"></i></button>
         </div>
