--- a/src/app/components/livro/lista-livros/lista-livros.component.css
+++ b/src/app/components/livro/lista-livros/lista-livros.component.css
@@ -1,13 +1,8 @@
 i{
   font-size: 2em;
-}
-.lista{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  width: 80vw;
+  color: red;
 }
 button{
   cursor: pointer;
+  border: none;
 }
